CHANGELOG

When		Who		What
======================================================================================
2018-09-26      Andriy Fetsyuk  Merged a change to support more environments. 
2018-08-30      Richard Forth   Issue #259 fix fpm support for ubuntu systems. 
2018-08-28      Richard Forth   Issue #259 add support for ubuntu 18.04 
2018-05-11      Richard Forth   Issue #253 need to specify a pid to bypass the 
				'Multple PIDS listeing on port 80' error.
2018-02-10      Richard Forth   Addressed a concern over plesk vhosts counting
                                now ommiting domains containing:
				     - lists
				     - default
				     - webmail
				from the count.
2017-12-05	Richard Forth   Closes #231 Respect ServerLimit.
2017-11-01	Richard Forth   Closes #229 Removed easter egg, causing problems.
2017-10-13	Richard Forth   Closes #223 Added an easter egg.
				To trigger it, set maxclients /
				maxrequestworkers to 5 or less.
2017-10-13	Richard Forth   Closes #222 pidfile not found when ecased in quotes.
2017-10-13	Richard Forth   Added some much needed carriage returns to VERBOSE lines.
2017-07-14	Richard Forth   Resolved #215, pidfile issue.
2017-07-08	Richard Forth   Resolved #195, virtualmin/webmin pidfile issue.
2017-07-08	Richard Forth   Resolved #211, detect virtualmin/webmin install.
				Note: only displays webmin version in virtualmin
				installs. 
2017-07-08	Richard Forth   Resolved #209, Yet more ubuntu madness...
				No /etc/php/7.0/apache2 folder, this is
				/etc/php/7.0/fpm. Added logic to include this.
2017-07-08	Richard Forth   Resolved #207, Hard Fail in OS is not listed
				as supported.
2017-07-08	Richard Forth   Resolved #206, Drop support for debian 7
				Issues with perl modules out of the box.
2017-07-08	Richard Forth   Resolved #205 at least on Debian 9
				debian update check broken, requires python
				Addded a new preflight check to check for a
				python binary.
				Also adjusted the way to check what OS we are